app/resources/style/event.scss
@import 'mixin';

.event-poster {
  height: 460px;
}

.event-thumbnail {
  height: 400px;
}

#home-body {
  margin: 10px 10%;
  width: 100vw;

  .user-thumbnail {
    max-width: 30px;
  }

  .no-events {
    margin-left: auto;
    margin-right: auto;

    img {
      max-width: 50vw;
      display: block;
      margin: auto;
    }

    p {
      margin-top: 10px;
      text-align: center;
      color: #3CB371;
      font-size: 20px;
      font-weight: 500;
    }
  }

  .event-tabs {
    .nav-tabs .nav-link {
      border: none;
      font-size: 18px;
      color: black;
    }

    .nav-tabs .nav-item.show .nav-link, .nav-tabs .nav-link.active {
      border-top: none;
      border-left: none;
      border-right: none;
      border-bottom: 3px solid maroon;
      color: maroon;
    }
  }

  #event-list {
    display: flex;
    flex-wrap: wrap;
    margin: 10px;
  }

  #event-container {
    width: 270px;
    margin: 10px 20px 0 0;
  }

  #event-image-container {
    display: block;
    text-align: center;
    background: lightgrey;
    height: 400px;
  }

  #event-description {
    margin-bottom: 10px;
    font-size: 16px;
  }

  .event-info-container {
    padding: 10px 20px;
    min-height: 106px;
  }

  .attendance-badge {
    height: 20px;
    font-size: 16px;
    color: lightgreen;
    margin-bottom: 5px;
    display: flex;
  }

  #attendance-badge-image {
    margin-right: 5px;
    border: 2px solid lightgreen;
    border-radius: 20px;
    width: 20px;
  }

  .event-picture {
    z-index: 10;
  }

  .attendance-indicator {
    margin: 0;
    height: 30px;
    display: flex;
    align-items: center;
    font-size: 16px;
  }

  .attendance-indicator-container > .active {
    font-weight: 700;
    border: 3px solid green;
  }

  #event-container > .collapse.show {
    display: inherit;
    visibility: visible;
    opacity: 1;
    @include transition(all 0.2s);
    max-height: 400px;
  }

  #event-container > .collapse {
    display: inherit;
    width: 90vw;
    @include transition(all 0.2s);
    max-height: 0;
    visibility: hidden;
    opacity: 0;
    @include box-shadow(2px, 2px, 15px, 0px, rgba(200,200,200,1));
  }

  .event-info {
    font-size: 12px;
    color: grey;
    width: 100%;
  }

  .event-title {
    font-size: 18px;
    font-weight: 700;
    margin: 0;
  }

  .event-attendance-title {
    margin: 0 15px 0 0;
    font-weight: 100;
    font-size: 16px;
  }

  .reasons {
    padding: 0;
    font-size: 14px;
    display: flex;
    align-items: center;
  }

  .event-img-button {
    right: 2px;
    position: absolute;
    padding: 5px 10px;
    border-radius: 20px;
    margin: 5px;
    font-size: 16px;
    cursor: pointer;
  }
}

#event-matches {
  .event-match-title, .event-reason-title {
    margin: 15px 5px 0 0;
    font-weight: 100;
    font-size: 16px;
  }

  .matches {
    padding: 5px 20px 0 0;
    font-size: 18px;
    color: green;
  }

  #all-projects {
    font-size: 16px;
    padding: 10px;
    height: 40px;
  }

  #match-container {
    display: flex;
    width: 100%;
    align-items: center;
    background: rgba(150, 150, 150, 0.1);
    padding: 0 10px;
  }
}

#event-body {
  width: 90%;

  .thumbnail-container {
    min-width: 100px;
    min-height: 80px;
    max-width: 100px;
    max-height: 80px;
    margin: 0 20px;
  }

  .project-thumbnail {
    max-height: 80px;
  }

  .event-info {
    font-size: 16px;
  }

  .btn {
    font-size: 15px;
  }

  #exhibition-container {
    color: black;

    #exhibition:hover {
      background: lightseagreen;
      color: white;
    }
  }
}

/* Event map */
#event-map {
  background-repeat: no-repeat;
  background-position: center;
  background-size: 100%;
  width: 100%;
  height: 0;
  padding: 0px;
  padding-bottom: 50%;
  box-sizing: border-box;
  position: relative;
  z-index: 2;
}

#event-map-pointers {
  font-size: 12px;
  padding: 5% 10%;
  display: block;
  /*
  background-color: Transparent;
  background-repeat:no-repeat;
  border: none;
  cursor:pointer;
  overflow: hidden;
  outline:none;
  color: white;
  */
}

